fixed stretching issue on images explore page

--- a/react-app/src/components/ExplorePage/explore.css
+++ b/react-app/src/components/ExplorePage/explore.css
@@ -48,7 +48,7 @@
     max-height:220px;
     width: 100%;
     height: auto;
-    /* max-width:fit-content;/ */
+    object-fit: cover;
     margin-right: 5px;
     margin-top: 5px;
     z-index: 1;
